HTML final version

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <body>
     <h1><a href="index.html">Life of a Democracy Man (데모크라시맨의 삶)</a></h1><br>
       <p><i>Hacked in <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specification">HTML</a> by Clint Yoo</i></p>
-      <img src="winston.jpeg" width="15%">
-      <p style="margin-bottom: 28px;">"Democracy is the worst form of government <strong>– <u>except for all the others</u> that have been tried."</strong> - Winston Churchill</p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/L1TWLSSBHT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
 
       <ol>
         <li><a href="1.html">Representative Democracy</a></li>
